--- a/noticias.html
+++ b/noticias.html
@@ -6,10 +6,10 @@
     <title>Noticias de Fuerteventura 2025 - Actualidad y Eventos | This is Fuerteventura</title>
     <meta name="theme-color" content="#0f4c81">
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticias.html">
-    <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css?v=2025111001">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <meta name="description" content="Últimas noticias de Fuerteventura 2025: actualidad local, eventos, turismo, cultura y deportes. Mantente informado sobre las Islas Canarias.">
+	<link rel="manifest" href="manifest.webmanifest">
+	<link rel="stylesheet" href="css/styles.css?v=2025111002">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<meta name="description" content="Últimas noticias de Fuerteventura 2025: actualidad local, eventos, turismo, cultura y deportes. Mantente informado sobre las Islas Canarias.">
     <meta name="keywords" content="noticias Fuerteventura, actualidad Fuerteventura, eventos Fuerteventura, noticias Canarias, prensa Fuerteventura, información local">
     <meta name="robots" content="index, follow, max-image-preview:large">
     
@@ -154,10 +154,10 @@
             <div class="footer-social">
                 <h4>Síguenos</h4>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="https://twitter.com/thisisfuertev" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="footer-contact">
