--- a/noticia.html
+++ b/noticia.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Noticia - This is Fuerteventura</title>
 	<meta name="theme-color" content="#0f4c81">
-	<link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticia.html">
+    <link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticia.html">
 	<link rel="manifest" href="manifest.webmanifest">
-	<link rel="stylesheet" href="css/styles.css?v=2025111001">
+	<link rel="stylesheet" href="css/styles.css?v=2025111002">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<meta name="description" content="Lee las últimas noticias de Fuerteventura con información detallada, imágenes y fuentes verificadas.">
 	<meta name="robots" content="index, follow, max-image-preview:large">
@@ -73,10 +73,10 @@
 			<div class="footer-social">
 				<h4>Síguenos</h4>
 				<div class="social-icons">
-					<a href="#"><i class="fab fa-facebook"></i></a>
-					<a href="#"><i class="fab fa-twitter"></i></a>
-					<a href="#"><i class="fab fa-instagram"></i></a>
-					<a href="#"><i class="fab fa-youtube"></i></a>
+					<a href="https://www.facebook.com/thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+					<a href="https://twitter.com/thisisfuertev" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+					<a href="https://www.instagram.com/thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+					<a href="https://www.youtube.com/@thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
 				</div>
 			</div>
 			<div class="footer-contact">
