--- a/playas.html
+++ b/playas.html
@@ -6,7 +6,7 @@
     <title>Playas de Fuerteventura 2025 - Guía Completa de las Mejores Playas | This is Fuerteventura</title>
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/playas.html">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css?v=2025111001">
+    <link rel="stylesheet" href="css/styles.css?v=2025111002">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Guía completa de playas de Fuerteventura 2025: Corralejo, Cofete, El Cotillo, Sotavento. Descubre playas paradisíacas, calas vírgenes y spots de surf en las Canarias.">
     <meta name="keywords" content="playas Fuerteventura, mejores playas Canarias, playa Cofete, playas Corralejo, El Cotillo, Sotavento, surf Fuerteventura, playas vírgenes, Bandera Azul">
@@ -385,10 +385,10 @@
             <div class="footer-social">
                 <h4>Síguenos</h4>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="https://twitter.com/thisisfuertev" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="footer-contact">
