news section email input autocomplete added

--- a/noticias.html
+++ b/noticias.html
@@ -128,7 +128,7 @@
         <h2>Suscríbete a nuestro boletín</h2>
         <p>Recibe las últimas noticias y ofertas de Fuerteventura directamente en tu correo.</p>
         <form id="newsletter-form">
-            <input type="email" placeholder="Tu correo electrónico" required>
+            <input type="email" id="newsletter-email" name="email" placeholder="Tu correo electrónico" autocomplete="email" required>
             <button type="submit" class="btn">Suscribirse</button>
         </form>
     </section>
