feat(UX): scroll reveal, sticky header, dark mode, Swiper galleries, news timeline, Leaflet map, ambient waves, quiz, and real-time form validation

--- a/alojamiento.html
+++ b/alojamiento.html
@@ -6,7 +6,8 @@
     <title>Alojamiento en Fuerteventura 2025 - Hoteles, Apartamentos y Villas | This is Fuerteventura</title>
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/alojamiento.html">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css?v=2025111002">
+    <link rel="stylesheet" href="css/styles.css?v=2025111501">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Encuentra el mejor alojamiento en Fuerteventura 2025: hoteles todo incluido, apartamentos vacacionales, villas de lujo y casas rurales. Corralejo, Caleta de Fuste, Jandía y más.">
     <meta name="keywords" content="hoteles Fuerteventura, apartamentos Fuerteventura, alojamiento Corralejo, hoteles Caleta de Fuste, villas Fuerteventura, todo incluido Canarias, donde alojarse Fuerteventura">
@@ -64,14 +65,14 @@
     </header>
 
     <main id="main">
-    <section class="hero accommodation-hero">
+    <section class="hero accommodation-hero parallax reveal">
         <div class="hero-content">
             <h2>Alojamiento en Fuerteventura</h2>
             <p>Encuentra tu hogar perfecto en la isla</p>
         </div>
     </section>
 
-    <section class="accommodation-search">
+    <section class="accommodation-search reveal">
         <h2>Busca tu alojamiento ideal</h2>
         <form class="search-form">
             <div class="form-group">
@@ -109,7 +110,7 @@
     </section>
 
     <!-- CORRALEJO (Norte) -->
-    <section class="tourism-content">
+    <section class="tourism-content reveal">
         <div class="container">
             <h2><i class="fas fa-map-marker-alt"></i> Corralejo - Norte de Fuerteventura</h2>
             <p class="zone-intro">Zona animada con dunas, playas espectaculares y excursiones a Isla de Lobos. Ideal para familias, deportes acuáticos y vida nocturna.</p>
@@ -208,7 +209,7 @@
     </section>
 
     <!-- CALETA DE FUSTE (Centro-Este) -->
-    <section class="tourism-content">
+    <section class="tourism-content reveal">
         <div class="container">
             <h2><i class="fas fa-map-marker-alt"></i> Caleta de Fuste - Centro-Este</h2>
             <p class="zone-intro">Perfecta base para recorrer la isla, cerca del aeropuerto, playa resguardada ideal para familias y campo de golf.</p>
@@ -306,7 +307,7 @@
     </section>
 
     <!-- COSTA CALMA -->
-    <section class="tourism-content">
+    <section class="tourism-content reveal">
         <div class="container">
             <h2><i class="fas fa-map-marker-alt"></i> Costa Calma - Sur</h2>
             <p class="zone-intro">Famosa por la Playa de Sotavento, paraíso del windsurf y kitesurf. Ambiente tranquilo ideal para relajarse.</p>
@@ -405,7 +406,7 @@
     </section>
 
     <!-- JANDÍA / MORRO JABLE (Sur) -->
-    <section class="tourism-content">
+    <section class="tourism-content reveal">
         <div class="container">
             <h2><i class="fas fa-map-marker-alt"></i> Jandía / Morro Jable - Sur</h2>
             <p class="zone-intro">Playas infinitas, paseo marítimo animado y faro de Jandía. Zona con más horas de sol de la isla.</p>
@@ -800,7 +801,7 @@
         </div>
     </section>
 
-    <section class="stay-zones">
+    <section class="stay-zones reveal">
         <h2>Zonas recomendadas para alojarse</h2>
         <div class="zones-grid">
             <div class="zone">
@@ -818,7 +819,7 @@
         </div>
     </section>
 
-    <section class="saving-tips">
+    <section class="saving-tips reveal">
         <h2>Consejos para ahorrar</h2>
         <ul>
             <li>Reserva con antelación en temporada alta (verano y Navidades).</li>
@@ -827,7 +828,7 @@
         </ul>
     </section>
 
-    <section class="accommodation-tips">
+    <section class="accommodation-tips reveal">
         <h2>Consejos para elegir alojamiento</h2>
         <div class="tips-container">
             <div class="tip">
@@ -891,8 +892,11 @@
         </div>
     </footer>
 
-    <script src="js/main.js?v=2025110501" defer></script>
+    <script src="js/main.js?v=2025111501" defer></script>
     <script src="js/cookies.js?v=2025111001" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
+    <script src="js/ux.js?v=2025111501" defer></script>
+    <script src="js/ambient.js?v=2025111501" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
