--- a/playas.html
+++ b/playas.html
@@ -6,7 +6,8 @@
     <title>Playas de Fuerteventura 2025 - Guía Completa de las Mejores Playas | This is Fuerteventura</title>
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/playas.html">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css?v=2025111002">
+    <link rel="stylesheet" href="css/styles.css?v=2025111501">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Guía completa de playas de Fuerteventura 2025: Corralejo, Cofete, El Cotillo, Sotavento. Descubre playas paradisíacas, calas vírgenes y spots de surf en las Canarias.">
     <meta name="keywords" content="playas Fuerteventura, mejores playas Canarias, playa Cofete, playas Corralejo, El Cotillo, Sotavento, surf Fuerteventura, playas vírgenes, Bandera Azul">
@@ -63,7 +64,7 @@
     </header>
 
     <main id="main">
-    <section class="hero beaches-hero">
+    <section class="hero beaches-hero parallax reveal">
         <div class="hero-content">
             <h2>Playas de Fuerteventura</h2>
             <p>Descubre el paraíso de arena y mar</p>
@@ -71,7 +72,7 @@
     </section>
 
     <!-- Tiempo general de Fuerteventura -->
-    <section class="island-weather" id="island-weather">
+    <section class="island-weather reveal" id="island-weather">
         <div class="container">
             <h2>Tiempo ahora en Fuerteventura</h2>
             <div class="island-weather-card" id="island-weather-card">
@@ -81,7 +82,7 @@
         </div>
     </section>
 
-    <section class="beaches-content">
+    <section class="beaches-content reveal">
         <div class="container">
             <h2>Las Mejores Playas de Fuerteventura</h2>
             <p class="intro-text">Descubre más de 150 playas con aguas cristalinas y arena dorada. Aquí te presentamos las imprescindibles.</p>
@@ -310,7 +311,7 @@
         </div>
     </section>
 
-    <section class="beach-profiles">
+    <section class="beach-profiles reveal">
         <h2>Playas por perfil de viajero</h2>
         <div class="profiles-grid">
             <div class="profile">
@@ -328,7 +329,7 @@
         </div>
     </section>
 
-    <section class="image-gallery">
+    <section class="image-gallery reveal">
         <h2>Galería de playas</h2>
         <div class="gallery-grid">
             <img src="https://images.unsplash.com/photo-1473116763249-2faaef81ccda?auto=format&fit=crop&w=1200&q=80" alt="Costa y dunas" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
@@ -338,7 +339,7 @@
         </div>
     </section>
 
-    <section class="beach-tips">
+    <section class="beach-tips reveal">
         <h2>Consejos para tu visita a la playa</h2>
         <div class="tips-container">
             <div class="tip">
@@ -403,7 +404,7 @@
     </footer>
 
                 <script src="js/proxy-discovery.js?v=2025110801" defer></script>
-                <script src="js/main.js?v=2025110801" defer></script>
+                <script src="js/main.js?v=2025111501" defer></script>
                 <script>
                 // Widget de tiempo general (Fuerteventura) - versión visual mejorada
                 (function(){
@@ -570,6 +571,9 @@
         })();
         </script>
     <script src="js/cookies.js?v=2025111001" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
+    <script src="js/ux.js?v=2025111501" defer></script>
+    <script src="js/ambient.js?v=2025111501" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
