UX: align remaining pages - noticias.html: parallax+reveal, ux.js & ambient.js, bump CSS/main - noticia.html: reveal container, ux.js & ambient.js, bump CSS/main - gastronomia.html: Swiper CSS/JS, parallax+reveal on sections, ux.js & ambient.js, bump CSS/main - contacto.html: parallax+reveal on sections, ux.js & ambient.js, bump CSS/main

--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <title>Contacto - This is Fuerteventura | Información Turística</title>
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/contacto.html">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css?v=2025111002">
+    <link rel="stylesheet" href="css/styles.css?v=2025111501">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Contacta con This is Fuerteventura para consultas sobre turismo, alojamiento, playas y eventos en las Islas Canarias. Estamos aquí para ayudarte.">
     <meta name="keywords" content="contacto Fuerteventura, información turística, consultas turismo Canarias">
@@ -62,14 +62,14 @@
     </header>
 
     <main id="main">
-    <section class="hero contact-hero">
+    <section class="hero contact-hero parallax reveal">
         <div class="hero-content">
             <h2>Contacto</h2>
             <p>Estamos aquí para ayudarte</p>
         </div>
     </section>
 
-    <section class="contact-content">
+    <section class="contact-content reveal">
         <div class="contact-container">
             <div class="contact-info">
                 <h2>Información de contacto</h2>
@@ -131,7 +131,7 @@
         </div>
     </section>
 
-    <section class="about-project">
+    <section class="about-project reveal">
         <div class="container">
             <h2>Sobre el proyecto</h2>
             <p>This is Fuerteventura es una guía independiente pensada para ayudarte a descubrir la isla: noticias, planes, gastronomía y consejos prácticos. Reunimos información útil y la presentamos de forma clara para que planifiques tu viaje o disfrutes si ya vives aquí.</p>
@@ -148,7 +148,7 @@
         </div>
     </section>
 
-    <section class="press-support">
+    <section class="press-support reveal">
         <div class="container">
             <h2>Prensa y soporte</h2>
             <p>Para colaboraciones, notas de prensa o soporte técnico, indícanos el asunto en el formulario y te responderemos lo antes posible.</p>
@@ -160,7 +160,7 @@
         </div>
     </section>
 
-    <section class="faq">
+    <section class="faq reveal">
         <h2>Preguntas frecuentes</h2>
         <div class="faq-container">
             <div class="faq-item">
@@ -220,8 +220,10 @@
         </div>
     </footer>
 
-    <script src="js/main.js?v=2025110501" defer></script>
+    <script src="js/main.js?v=2025111501" defer></script>
     <script src="js/cookies.js?v=2025111001" defer></script>
+    <script src="js/ux.js?v=2025111501" defer></script>
+    <script src="js/ambient.js?v=2025111501" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
