--- a/noticia.html
+++ b/noticia.html
@@ -7,7 +7,7 @@
 	<meta name="theme-color" content="#0f4c81">
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticia.html">
 	<link rel="manifest" href="manifest.webmanifest">
-	<link rel="stylesheet" href="css/styles.css?v=2025111002">
+	<link rel="stylesheet" href="css/styles.css?v=2025111501">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<meta name="description" content="Lee las últimas noticias de Fuerteventura con información detallada, imágenes y fuentes verificadas.">
 	<meta name="robots" content="index, follow, max-image-preview:large">
@@ -44,7 +44,7 @@
 	</header>
 
 	<main class="article-page" id="main">
-		<div class="container">
+		<div class="container reveal">
 			<a href="noticias.html" class="btn" style="margin: 20px 0; display:inline-flex; align-items:center; gap:8px;">
 				<i class="fas fa-chevron-left"></i> Volver a noticias
 			</a>
@@ -90,10 +90,12 @@
 		</div>
 	</footer>
 
-	<script src="js/main.js?v=2025110901" defer></script>
+	<script src="js/main.js?v=2025111501" defer></script>
 	<script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
 	<script src="js/article-loader.js?v=2025111007" defer></script>
 	<script src="js/cookies.js?v=2025111001" defer></script>
+	<script src="js/ux.js?v=2025111501" defer></script>
+	<script src="js/ambient.js?v=2025111501" defer></script>
 
 	<!-- Cookie Consent Banner -->
 	<div id="cookie-consent" class="cookie-consent">
