--- a/noticias.html
+++ b/noticias.html
@@ -6,8 +6,8 @@
     <title>Noticias de Fuerteventura 2025 - Actualidad y Eventos | This is Fuerteventura</title>
     <meta name="theme-color" content="#0f4c81">
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticias.html">
-	<link rel="manifest" href="manifest.webmanifest">
-	<link rel="stylesheet" href="css/styles.css?v=2025111002">
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="stylesheet" href="css/styles.css?v=2025111501">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<meta name="description" content="Últimas noticias de Fuerteventura 2025: actualidad local, eventos, turismo, cultura y deportes. Mantente informado sobre las Islas Canarias.">
     <meta name="keywords" content="noticias Fuerteventura, actualidad Fuerteventura, eventos Fuerteventura, noticias Canarias, prensa Fuerteventura, información local">
@@ -89,14 +89,14 @@
     </header>
 
     <main id="main">
-    <section class="hero">
+    <section class="hero parallax reveal">
         <div class="hero-content">
             <h2>Noticias de Fuerteventura</h2>
             <p>Mantente al día con las últimas novedades de la isla</p>
         </div>
     </section>
 
-    <section class="news-filters">
+    <section class="news-filters reveal">
         <div class="container">
             <div class="search-bar">
                 <input type="text" id="news-search" placeholder="Buscar noticias...">
@@ -105,7 +105,7 @@
         </div>
     </section>
 
-    <section class="news-content">
+    <section class="news-content reveal">
         <div class="container">
             <div class="pagination top">
                 <button id="prev-page-top" class="btn" disabled><i class="fas fa-chevron-left"></i> Anterior</button>
@@ -124,7 +124,7 @@
         </div>
     </section>
 
-    <section class="newsletter">
+    <section class="newsletter reveal">
         <h2>Suscríbete a nuestro boletín</h2>
         <p>Recibe las últimas noticias y ofertas de Fuerteventura directamente en tu correo.</p>
         <form id="newsletter-form">
@@ -203,7 +203,7 @@
             }
         });
     </script>
-    <script src="js/main.js?v=2025110901" defer></script>
+    <script src="js/main.js?v=2025111501" defer></script>
     <script src="js/proxy-discovery.js?v=2025110901" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
     <script src="js/feed-utils.js?v=2025111005" defer></script>
@@ -211,6 +211,8 @@
     <script src="js/content-loader.js?v=2025111003" defer></script>
     <script src="js/news.js?v=2025111003" defer></script>
     <script src="js/cookies.js?v=2025111001" defer></script>
+    <script src="js/ux.js?v=2025111501" defer></script>
+    <script src="js/ambient.js?v=2025111501" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
