--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Cookies - This is Fuerteventura</title>
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/politica-cookies.html">
-    <link rel="stylesheet" href="css/styles.css?v=2025111002">
+    <link rel="stylesheet" href="css/styles.css?v=2025111501">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Política de cookies de This is Fuerteventura. Información sobre el uso de cookies en nuestro sitio web.">
     <meta name="robots" content="index, follow">
 </head>
@@ -31,7 +32,7 @@
         </div>
     </header>
 
-    <main style="padding: 40px 5%; max-width: 1200px; margin: 0 auto;">
+    <main class="reveal" style="padding: 40px 5%; max-width: 1200px; margin: 0 auto;">
         <h1>Política de Cookies</h1>
         <p><strong>Última actualización:</strong> 10 de noviembre de 2025</p>
 
@@ -173,6 +174,8 @@
         </div>
     </footer>
 
-    <script src="js/main.js?v=2025110901" defer></script>
+    <script src="js/main.js?v=2025111501" defer></script>
+    <script src="js/ux.js?v=2025111501" defer></script>
+    <script src="js/ambient.js?v=2025111501" defer></script>
 </body>
 </html>
