arquitecture: add narrative scroll and particles effects

--- a/alojamiento.html
+++ b/alojamiento.html
@@ -65,7 +65,7 @@
     </header>
 
     <main id="main">
-    <section class="hero accommodation-hero parallax reveal">
+    <section class="hero accommodation-hero parallax reveal particle-scene">
         <div class="hero-content">
             <h2>Alojamiento en Fuerteventura</h2>
             <p>Encuentra tu hogar perfecto en la isla</p>
@@ -911,6 +911,13 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
     <script src="js/ux.js?v=2025111501" defer></script>
     <script src="js/ambient.js?v=2025111501" defer></script>
+    <!-- Three.js for particle system -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
+    <!-- GSAP + ScrollTrigger for narrative animations -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="js/particles.js?v=2025111501" defer></script>
+    <script src="js/narrative-scroll.js?v=2025111501" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
