--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
     </header>
     <main id="main">
-    <section class="hero parallax reveal">
+    <section class="hero parallax reveal particle-scene">
         <div class="hero-content">
             <h2>Bienvenido a Fuerteventura</h2>
             <p>Descubre el paraíso de las Islas Canarias</p>
@@ -117,9 +117,9 @@
         </div>
     </section>
 
-    <section class="featured-content reveal">
+    <section class="featured-content reveal reveal-deep">
         <h2>Destacados</h2>
-        <div class="content-grid" id="featured-news">
+        <div class="content-grid card-stagger" id="featured-news">
             <!-- El contenido se cargará dinámicamente con JavaScript -->
             <div class="loading">Cargando contenido...</div>
         </div>
@@ -235,6 +235,12 @@
             }
         });
     </script>
+    <!-- Three.js for particle system -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
+    <!-- GSAP + ScrollTrigger for narrative animations -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    
     <script src="js/main.js?v=2025111501" defer></script>
     <script src="js/proxy-discovery.js?v=2025110901" defer></script>
     <script src="js/cookies.js?v=2025111001" defer></script>
@@ -242,6 +248,8 @@
     <script src="js/ux.js?v=2025111501" defer></script>
     <script src="js/ambient.js?v=2025111501" defer></script>
     <script src="js/quiz.js?v=2025111501" defer></script>
+    <script src="js/particles.js?v=2025111501" defer></script>
+    <script src="js/narrative-scroll.js?v=2025111501" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
