--- a/playas.html
+++ b/playas.html
@@ -64,7 +64,7 @@
     </header>
 
     <main id="main">
-    <section class="hero beaches-hero parallax reveal">
+    <section class="hero beaches-hero parallax reveal particle-scene">
         <div class="hero-content">
             <h2>Playas de Fuerteventura</h2>
             <p>Descubre el paraíso de arena y mar</p>
@@ -87,7 +87,7 @@
             <h2>Las Mejores Playas de Fuerteventura</h2>
             <p class="intro-text">Descubre más de 150 playas con aguas cristalinas y arena dorada. Aquí te presentamos las imprescindibles.</p>
 
-            <div class="beaches-grid">
+            <div class="beaches-grid card-stagger">
                 <article class="beach-card">
                     <img src="images/playas/corralejo.jpeg" alt="Grandes Playas de Corralejo" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                     <div class="beach-info">
@@ -587,6 +587,13 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
     <script src="js/ux.js?v=2025111501" defer></script>
     <script src="js/ambient.js?v=2025111501" defer></script>
+    <!-- Three.js for particle system -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
+    <!-- GSAP + ScrollTrigger for narrative animations -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="js/particles.js?v=2025111501" defer></script>
+    <script src="js/narrative-scroll.js?v=2025111501" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
